fix placeholder responsive on mobile and make component as capital letter

--- a/styles/_placeholder.styl
+++ b/styles/_placeholder.styl
@@ -22,7 +22,15 @@
 @media(max-width:768px){
    .placeholder-container h4{
        font-size:5vh
+   }
+   .placeholder-container{
+    justify-content: center;
+    padding: 2em 3em;
    } 
+   .placeholder_img{
+       margin:0 auto;
+       width: 22em;
+   }
 }
 @media(min-width:1000px){
    .placeholder-container{
